--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,6 @@ target 'Example' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'CameraAndMicrophoneCheck', :path => '../'
+  pod 'CMChecker', :path => '../'
 
 end
